logs/robophery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robophery'...
Listing './lib/python3.5/site-packages/robophery/comm'...
Listing './lib/python3.5/site-packages/robophery/comm/linux'...
Listing './lib/python3.5/site-packages/robophery/comm/nodemcu'...
Listing './lib/python3.5/site-packages/robophery/interface'...
Listing './lib/python3.5/site-packages/robophery/module'...
Listing './lib/python3.5/site-packages/robophery/module/ble'...
Listing './lib/python3.5/site-packages/robophery/module/gpio'...
Compiling './lib/python3.5/site-packages/robophery/module/gpio/relay.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (relay.py, line 20)
Listing './lib/python3.5/site-packages/robophery/module/i2c'...
Compiling './lib/python3.5/site-packages/robophery/module/i2c/am2320.py'...
***   File "./lib/python3.5/site-packages/robophery/module/i2c/am2320.py", line 36
    except IOError, exc:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robophery/module/pwm'...
Listing './lib/python3.5/site-packages/robophery/module/virtual'...
Listing './lib/python3.5/site-packages/robophery/module/w1'...
Listing './lib/python3.5/site-packages/robophery/platform'...
Listing './lib/python3.5/site-packages/robophery/platform/bbb'...
Listing './lib/python3.5/site-packages/robophery/platform/ft232h'...
Listing './lib/python3.5/site-packages/robophery/platform/linux'...
Listing './lib/python3.5/site-packages/robophery/platform/minnowboard'...
Listing './lib/python3.5/site-packages/robophery/platform/nodemcu'...
Listing './lib/python3.5/site-packages/robophery/platform/pca9685'...
Listing './lib/python3.5/site-packages/robophery/platform/pcf8574'...
Listing './lib/python3.5/site-packages/robophery/platform/rpi'...
Listing './lib/python3.5/site-packages/robophery/utils'...
Listing './lib/python3.5/site-packages/robophery-0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
